# X6200Control

./: .gitignore  CMakeLists.txt  README.md
buildroot/: cmake.sh  install.sh
cmake/: developer_mode.cmake  installation.cmake  output_structure.cmake  packaging.cmake
cmake/compiler_flags/: cxx_iso_flags.cmake  cxx_standard.cmake  fast_math.cmake  ipo_support.cmake
examples/: CMakeLists.txt  atu.c  flow.c  ptt.c  vfo.c
include/: CMakeLists.txt
include/aether_radio/: CMakeLists.txt
include/aether_radio/x6100_control/: control.h
include/aether_radio/x6100_control/low/: control.h  flow.h
include/aether_radio/x6200_control/: CMakeLists.txt  api.h  control.h
include/aether_radio/x6200_control/low/: CMakeLists.txt  control.h  flow.h  gpio.h
src/: CMakeLists.txt  control.c
src/low/: CMakeLists.txt  control.c  flow.c  gpio.c
